# Phone-OS

./: .gitignore  Cargo.toml  README.md  diagram.json  sdkconfig.defaults  shell.nix  wokwi.toml
.cargo/: config.toml
src/: events.rs  main.rs  phone.rs  state.rs  ui.rs
src/apps/: app.rs  home.rs  mod.rs  wifi.rs
src/drivers/: ft6206.rs  ili9341.rs  mod.rs
src/ui/: mod.rs  ui.rs
src/ui/apps/: home.rs
src/ui/widgets/: clickable_button.rs  keyboard.rs  mod.rs
