[package]
name = "esp32-phone-os"
version = "0.1.0"
authors = ["Julien-cpsn <julien.caposiena@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp32-phone-os"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync", "nightly"] }

mousefood = "0.2.1"
embedded-graphics = "0.8.1"
display-interface-spi = "0.5.0"
ili9341 = "0.6.0"

anyhow = "1.0.99"
once_cell = "1.21.3"
async-trait = "0.1.89"
crossbeam-channel = "0.5.15"
heapless = "0.8.0"

[build-dependencies]
embuild = "0.33.1"

[package.metadata.esp-idf]
# Enables PSRAM support in esp-idf-sys
esp-idf.psram = true
